# static-searcher

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cc
src/web/: CMakeLists.txt  index.html  main.cc
